--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
           <!-- majher part -->
           <div class="flex items-center justify-center lg:relative left-80 md:pr-5">
-              <img src="/logo.png" alt="">
+              <img src="./logo.png" alt="">
             <a class="md:text-white btn btn-ghost normal-case text-xl">Fruit Brust</a>
           </div>
         
