--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="carousel w-full">
             <!-- slideeeee 1  -->
             <div class="hero min-h-[300px] md:min-h-[475px]  carousel-item relative w-full" id="slide1"
-                style="background-image: url(/banner1.png);">
+                style="background-image: url(./banner1.png);">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="max-w-md">
@@ -135,7 +135,7 @@
             </div>
             <!-- sliderrr 2 -->
             <div class="hero min-h-[300px] md:min-h-[475px]  carousel-item relative w-full" id="slide2"
-                style="background-image: url(/banner2.png);">
+                style="background-image: url(./banner2.png);">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="max-w-md">
@@ -152,7 +152,7 @@
 
             <!-- slideee      3 -->
             <div class="hero min-h-[300px] md:min-h-[475px]  carousel-item relative w-full" id="slide3"
-                style="background-image: url(/banner3.png);">
+                style="background-image: url(./banner3.png);">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="max-w-md">
@@ -192,23 +192,23 @@
 
 <div class="bg-white flex rounded-box justify-center max-w-fit gap-x-10 md:max-w-2xl lg:max-w-3xl  ">
     <div>
-        <img src="/fruit1.png" alt="">
+        <img src="./fruit1.png" alt="">
         <p class="text-center">Grape</p>
     </div>
     <div>
-        <img src="/fruit2.png" alt="">
+        <img src="./fruit2.png" alt="">
         <P class="text-center">Orange</P>
     </div>
     <div>
-        <img src="/fruit3.png" alt="">
+        <img src="./fruit3.png" alt="">
         <P class="text-center">Mango</P>
     </div>
     <div>
-        <img src="/fruit4.png" alt="">
+        <img src="./fruit4.png" alt="">
         <P class="text-center">Strawberry</P>
     </div>
     <div>
-        <img src="/fruit5.png" alt="">
+        <img src="./fruit5.png" alt="">
         <P class="text-center">Pomegranate</P>
     </div>
     
@@ -287,7 +287,7 @@
 <div class="grid-cols-1 p-10 md:flex ">
     <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="/fruit6.png" alt="Shoes" class="rounded-xl" />
+          <img src="fruit6.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -319,7 +319,7 @@
           
               <div class="card  bg-base-100 shadow-xl">
                   <figure class="px-10 pt-10">
-                    <img src="/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    <img src="./fruit6.png" alt="Shoes" class="rounded-xl" />
                   </figure>
                   <div class="card-body items-center text-center">
                     <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -358,7 +358,7 @@
 
       <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="/fruit7.png" alt="Shoes" class="rounded-xl" />
+          <img src="./fruit7.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -382,7 +382,7 @@
   <div class="modal-box">
     <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="/fruit7.png" alt="Shoes" class="rounded-xl" />
+          <img src="./fruit7.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -434,7 +434,7 @@
 
       <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="/fruit8.png" alt="Shoes" class="rounded-xl" />
+          <img src="./fruit8.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -459,7 +459,7 @@
   <div class="modal-box">
     <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="/fruit8.png" alt="Shoes" class="rounded-xl" />
+          <img src="./fruit8.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -492,7 +492,7 @@
 
       <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="/fruit9.png" alt="Shoes" class="rounded-xl" />
+          <img src="./fruit9.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -517,7 +517,7 @@
   <div class="modal-box">
     <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="/fruit9.png" alt="Shoes" class="rounded-xl" />
+          <img src="./fruit9.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -569,7 +569,7 @@
 
 
 
-    <div class="hero min-h-screen" style="background-image: url(/banner1.png);">
+    <div class="hero min-h-screen" style="background-image: url(./banner1.png);">
         <div class="hero-overlay bg-opacity-70"></div>
         <div class="hero-content text- text-neutral-content">
           <div class="max-w-md">
@@ -710,7 +710,7 @@
 </div>
 </div>  
 <div class="">
-    <img src="/member4.png" alt="" class="center-image">
+    <img src="./member4.png" alt="" class="center-image">
 <h3 class="text-2xl font-bold ">Chaity Mia</h3>
 <p class="">Fruits Expert</p>
 <div class="flex gap-2 items-center  relative "><svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -842,7 +842,7 @@
 
 
         <div class="md:pl-40  lg:pl-0 w-auto ">
-            <img src="/whychoose1.png" alt="" class="w-96   ">
+            <img src="./whychoose1.png" alt="" class="w-96   ">
         </div>
 
 
@@ -896,7 +896,7 @@
 
 <footer class="footer footer-center p-10 bg-black text-base-content rounded">
     <div class="flex ">
-        <img src="/logo.png" alt=""><p class="text-white text-5xl font-extrabold">Fruit Burst</p>
+        <img src="./logo.png" alt=""><p class="text-white text-5xl font-extrabold">Fruit Burst</p>
     </div>
     <div class="grid grid-flow-col gap-4 text-white">
       <a class="link link-hover">Home</a> 
@@ -904,7 +904,7 @@
       <a class="link link-hover">Shop</a> 
       <a class="link link-hover">All Fruits</a>
       <a class="link link-hover">Support</a>
-      <a class="link link-hover">My Account</a>
+      <a class="link link-hover">My account</a>
     </div> 
     <div class="">
       <div class="grid grid-flow-col gap-x-10 text-2xl ">
