--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <div class="grid-cols-1 p-10 md:flex ">
     <div class="card w-96 bg-base-100 shadow-xl">
         <figure class="px-10 pt-10">
-          <img src="fruit6.png" alt="Shoes" class="rounded-xl" />
+          <img src="./fruit6.png" alt="Shoes" class="rounded-xl" />
         </figure>
         <div class="card-body items-center text-center">
           <h2 class="card-title border-b border-gray-300 pb-2">12.90$ - 18.85$</h2>
@@ -924,7 +924,7 @@
 
 
 
-<!-- experiment  -->
+
 
 
 </html>
